--- a/pydoc.html
+++ b/pydoc.html
@@ -5,7 +5,9 @@
     <title>pydoc</title>
   </head>
   <body>
+    Output of <ttt>pyton -m pydoc</ttt>
     <form
+      value="math.dist"
       action="cgi-bin/pydoc.cgi">
       <input
 	name="pydoc">
