--- a/pydoc.html
+++ b/pydoc.html
@@ -12,5 +12,13 @@
       <input
 	name="pydoc">
     </form>
+    <br>
+    Output of <ttt>man</ttt>
+    <form
+      value="math.dist"
+      action="cgi-bin/man.cgi">
+      <input
+	name="pydoc">
+    </form>
   </body>
 </html>
